src/objects/Route__c.object
<CustomObject>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Describes if the selected route is active or not</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Port_of_Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Port of Destination</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Port</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Routes (Port of Destination)</relationshipLabel>
        <relationshipName>Routes_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Port_of_Origin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Port of Origin</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Port</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Routes</relationshipLabel>
        <relationshipName>Routes_start</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Route</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>